Basic chat panel styling and overflow fix

--- a/client/freecom/src/App.css
+++ b/client/freecom/src/App.css
@@ -2,6 +2,7 @@
 
 .flex {  display: flex;  }
 .flex-direction { flex-direction: row }
+.flex-bottom { align-items: flex-end; }
 
 .interior-padding { padding: 30px }
 .drop-shadow {  box-shadow: 0px 6px 30px -4px rgba(0,0,0,0.45); }
@@ -20,6 +21,8 @@
 .full-width { width: 100%; }
 .flex-center { justify-content: center; align-items: center; }
 .flex-hcenter { justify-content: center; }
+.overflow-hidden {  overflow: hidden; }
+.overflow-scroll { overflow: scroll; }
 
 
 .fadeInUp {  animation: fadeInUp 0.4s ease 0s 1 normal;  }
@@ -57,10 +60,13 @@
 
 .panel {
     position: relative;
-    overflow: auto;
     height: calc(100% - 80px);
     margin-bottom: 20px;
     background-color: white;
+}
+
+.panel .body {
+    height: calc(100% - 80px);
 }
 
 .header {
@@ -70,7 +76,10 @@
 }
 
 .avatar {
+    position: relative;
+    width: 40px;
     min-width: 40px;
+    height: 40px;
     min-height: 40px;
     margin-right: 10px;
     border-radius: 50%;
